--- a/Code/web-server/src/views/access-log.ejs
+++ b/Code/web-server/src/views/access-log.ejs
@@ -31,8 +31,26 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr class="border-b border-b-slate-300">
-                        </tr>
+                        <% accessLog.forEach(entry => { %>
+                            <tr class="border-b border-b-slate-300">
+                                <td class="pl-2 py-2"><%= entry.name %></td>
+                                <td class="py-2" style="font-family: JetBrains Mono, monospace;"><%= entry.uid %></td>
+                                <td class="py-2 ">
+                                    <div class="flex items-center gap-1">
+                                        <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"><path d="M480-80q-75 0-140.5-28.5t-114-77q-48.5-48.5-77-114T120-440q0-75 28.5-140.5t77-114q48.5-48.5 114-77T480-800q75 0 140.5 28.5t114 77q48.5 48.5 77 114T840-440q0 75-28.5 140.5t-77 114q-48.5 48.5-114 77T480-80Zm0-360Zm112 168 56-56-128-128v-184h-80v216l152 152ZM224-866l56 56-170 170-56-56 170-170Zm512 0 170 170-56 56-170-170 56-56ZM480-160q117 0 198.5-81.5T760-440q0-117-81.5-198.5T480-720q-117 0-198.5 81.5T200-440q0 117 81.5 198.5T480-160Z"/></svg>
+                                        <span><%= entry.tin %></span>
+                                    </div>
+                                </td>
+                                <td class="py-2">
+                                    <div class="flex items-center gap-1">
+                                        <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#000000"><path d="M600-160q-134 0-227-93t-93-227q0-133 93-226.5T600-800q133 0 226.5 93.5T920-480q0 134-93.5 227T600-160Zm0-80q100 0 170-70t70-170q0-100-70-170t-170-70q-100 0-170 70t-70 170q0 100 70 170t170 70Zm91-91 57-57-108-108v-144h-80v177l131 132ZM80-600v-80h160v80H80ZM40-440v-80h200v80H40Zm40 160v-80h160v80H80Zm520-200Z"/></svg>
+                                        <span><%= entry.tout %></span>
+                                    </div>
+                                    
+                                </td>
+                            </tr>
+                        <% }) %>
+
                     </tbody>
                 </table>
             </div>
